--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "author": "victommasi",
+  "description": "Crypto Wallet made with React + TS + Tailwind",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
